fixed alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,10 @@ a:hover {
 }
 
 i {
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    margin-left: 10px;
+    margin-right: 10px;
     border-radius: 5px;
     /*font-family: "gilroy-bold";*/
 }
